<resources>
    <string name="app_name">AaoShoppingKare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter password</string>
    <string name="enterconfirm_password">EnterConfirm password</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="registration">Registration</string>
    <string name="forgot_password">Forgot Password!!</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
</resources>